Fixed dashboard icon alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,120 +1,122 @@
 .title-box {
-    margin-top: 13px;
-    background: white;
-    padding: 6px 17px;
-    border-top: 5px solid #0085ba;
+  margin-top: 13px;
+  background: white;
+  padding: 6px 17px;
+  border-top: 5px solid #0085ba;
 }
 
 .active {
-    box-shadow: inset 0 -3px #007cba;
-    font-weight: bold;
+  box-shadow: inset 0 -3px #007cba;
+  font-weight: bold;
 }
 
 .tabs {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .tabs a {
-    text-decoration: none;
-    color: black;
-    padding: 13px 15px;
-    margin: 0px 2px;
-    background: white;
+  text-decoration: none;
+  color: black;
+  padding: 13px 15px;
+  margin: 0px 2px;
+  background: white;
 }
 
 .mighty-product-name {
-    color: black;
-    font-weight: bolder;
-    font-size: 18px;
+  color: black;
+  font-weight: bolder;
+  font-size: 18px;
 }
 
 .mighty-more-themes-plugins-button {
-    background-color: #23282d;
-    padding: 10px 20px;
-    font-size: 13px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 3px;
+  background-color: #23282d;
+  padding: 10px 20px;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 3px;
 }
 
 .mighty-more-themes-plugins-button img {
-    max-width: 18px;
-    float: left;
-    margin-right: 10px;
+  max-width: 18px;
+  float: left;
+  margin-right: 10px;
 }
 
 .mighty-brand {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .mighty-brand .logo {
-    vertical-align: middle;
-    height: 70px;
-    width: 70px;
+  vertical-align: middle;
+  height: 70px;
+  width: 70px;
 }
+
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
-  #adminmenu .wp-menu-image img {
-    padding: 6px 0 0 0;
-  }
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.slider {
+  background-color: #2196F3;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.toplevel_page_mighty-fbt-home .wp-menu-image img {
+  padding: 6px 0 0 0 !important;
+}
